# piraeus

./: .gitignore  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  FRONTEND_DEPLOYMENT_GUIDE.md  FRONTEND_WORKFLOW_TESTING_GUIDE.md  MANUAL_TEST_README.md  README.md  STRICT_MCP_PROMPT.md  WEATHER_TOOL_TEST_RESULTS.md  WORKFLOW_TESTING_GUIDE.md  manual_test_riftbound_workflow.py  package-lock.json  package.json  setup-local-dev.ps1  setup-local-dev.sh  tailwind.config.ts  test_workflow_simple.ps1
.cursor/: code_audit.md  (+1 more)
backend/: .env  .env.example  API_REFERENCE.md  COMPLETION_REPORT.txt  Dockerfile  EMERGENT_QUICK_START.md  EMERGENT_SETUP_GUIDE.md  FRONTEND_SCHEMA_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  SCHEMA_ANALYSIS.md  SIMPLE_TOOL_GENERATOR_SUMMARY.md  SIMPLE_TOOL_USAGE.md  TEST_OPENAI_RESPONSES_SETUP.md  TEST_RESULTS.md  VERCEL_DEPLOYMENT.md  WIRING_SUMMARY.md  discovered_schema.json  docker-compose.yml  inspect_tables.py  pyproject.toml  query_schema.py  query_schema_v2.py  railway.toml  requirements.txt  run_database_tests.py  server.py  start-backend-local.ps1  start_server.sh  test_mcp_client.py  test_openai_responses_mcp.py  test_simple_tool_generator.py  test_tool_workflow.py  test_weather_tool.py  test_weather_workflow.py  vercel.json
backend/api/: index.py
backend/examples/: company_search.py  config_tools.py  simple_tools.py
backend/migrations/: 001_create_missing_tables.sql  002_add_frontend_compatibility.sql
backend/src/dynamic_tools/: __init__.py  decorators.py  utils.py
backend/src/dynamic_tools/api/: __init__.py  app.py  database_endpoints.py  endpoints.py  proxy.py
backend/src/dynamic_tools/config/: __init__.py  settings.py
backend/src/dynamic_tools/core/: __init__.py  base.py  executor.py  orchestrator.py  registry.py
backend/src/dynamic_tools/factory/: __init__.py  api_tool.py  tool_factory.py
backend/src/dynamic_tools/models/: __init__.py  api_requests.py  database.py  database_models.py  enums.py  http_spec.py  simple_tool.py  tool_config.py
backend/src/dynamic_tools/services/: __init__.py  flow_constructor_service.py  http_client.py  prompt_service.py  prompt_templates.py  simple_tool_executor.py  simple_tool_generator.py  supabase_service.py  workflow_orchestrator.py
backend/tests/: conftest.py  test_config_tools.py  test_database_endpoints.py  test_endpoints.py  test_executor.py  test_http_client.py  test_prompt_service.py  test_registry.py  test_simple_tool_executor.py  test_workflow_integration.py  test_workflow_orchestrator.py
(+145 files in other folders)
