[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-tools"
version = "0.1.0"
description = "Dynamically expanding toolset system for AI models"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "tenacity>=8.0",
    "loguru>=0.7",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "fastapi>=0.121.1",
    "pydantic-settings>=2.11.0",
    "pytest-httpx>=0.35.0",
    "uvicorn>=0.38.0",
    "mcp>=1.21.0",
    "fastmcp>=2.13.0.2",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_tools"]

[tool.uv]
dev-dependencies = [
    "mcp[inspector]>=1.21.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

