[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-tools"
version = "0.1.0"
description = "Dynamically expanding toolset system for AI models"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "tenacity>=8.0",
    "loguru>=0.7",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.11.0",
    "pytest-httpx>=0.35.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_tools"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

